--- a/1.html
+++ b/1.html
@@ -16,6 +16,6 @@
   </ul>
   <h2>HTML</h2>
   <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="HTML guide">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
-  <img src="file:///Users/trevorkim/Desktop/Web/vantage-point-photographers-207UadaT4xE-unsplash.jpg" width="200px" height="300px">
+  <img src="https://media.istockphoto.com/photos/abstract-graphic-world-map-illustration-on-blue-background-big-data-picture-id1294021851?s=612x612" width="200px" height="300px">
   <p style="margin-top:40px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.</p>
 </body>
